<resources>
    <string name="app_name">iKungfu</string>
    <string name="tip_daimajia_has_gone">今日は肥皂家がない、干物の供給がない...\n今天编辑们休息哦，没有干货提供！\n如果想在此处展示您的优秀作品，请联系
        drakeet.
    </string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="member_detail">
        会员详情，凡是会员均有资格查看在线课堂中的课程，每位普通会员如果想成为付费会员的话必须要充值，每位会员充值的费用有期限，希望大家能定期检查自己的会员，过期不能查看概不负责。
    </string>
    <string name="member_price_1">
        <html>一个月
            <font color="#aabb00">20元</font>
        </html>
    </string>


    <string name="login_with_msg">用手机号码登录</string>
    <string name="login_with_weixin">用微信登录</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">
        一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap
        userInfo”携带给login方法。客户端通过“String
        userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册
    </string>
    <string name="about">
        艾特·功夫（iKungfu）是专为武术，功夫，格斗等爱好者打造的一款集在线学习，视频教程，直播课堂，名师讲堂，即时通讯，互动交流，在线购物，行业资讯等服务为一体的平台！艾特功夫学校
        新校区完善使用，5800平方米超大豪华综合型培训学院，空翻、花技、战舞、格斗、养生、斗秀、影武、冷兵，学院配有宿舍食堂，校区配有卫生间，洗澡间，电视，空调，健身房，全校覆盖Wi-Fi，等，来学习的朋友们，到临沂后打电话给我们，会有专车接送
        ，前来学校参观，试学满意后再报名学习。
    </string>


    <string name="about2">
        \n武林同盟统一咨询方式：
        \n全国免费电话400－0539－782
        \n周红星教练手机号：18669905848，18653553001，\n企业QQ：4000539782，\n周红星教练个人QQ：876612345，\n报名招生QQ：1339732050，1586834517，\n网站:www.wulintongmeng.com，\n百度视频搜索“武林同盟”，全方面了解武林同盟，周红星总教练及教练团队手把手教学，包教包会。另有跆拳道教练班、极限武术研修班、影视武打演员班、终极武道特训班等多种课程可以选择学习，敬请关注！
    </string>


    <!-- 区分================================================================================ -->
    <string name="back">返回</string>
    <string name="prolist_xiaoliang">销量</string>
    <string name="prolist_price">价格</string>
    <string name="prolist_good">好评</string>
    <string name="prolist_new">最新</string>
    <string name="prolist_title">男士哑铃一对10公斤</string>
    <string name="prolist_title_shopcar">男士哑铃一对10公斤男士哑铃一对10公斤</string>
    <string name="prolist_price_s">￥20.00</string>
    <string name="prolist_exchange_point">2000积分</string>
    <string name="prolist_price_m">1000人</string>
    <string name="prolist_exchange_s">兑换成功</string>
    <string name="prolist_pay_num">销量：1000</string>
    <string name="proinfo_title">瑜伽球大号一个</string>
    <string name="proinfo_baoyou">包邮</string>
    <string name="proinfo_com_date">2016年1月26日11:41</string>
    <string name="proinfo_user_guige">规格：S/黑色</string>
    <string name="proinfo_liulan">浏览量：1000</string>
    <string name="proinfo_xiaoliang">销量：1000</string>
    <string name="proinfo_guige">请选择规格</string>
    <string name="proinfo_user_comment">用户评价</string>
    <string name="proinfo_exchange_time">兑换时间：2016年1月26日16:52:03</string>
    <string name="proinfo_productinfo">商品介绍</string>
    <string name="proinfo_pinglunnum">共100条</string>
    <string name="proinfo_username">寒露</string>
    <string name="proinfo_usercontent">我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？我是谁，我在哪，今天晚上吃什么？</string>
    <string name="proinfo_like">20</string>
    <string name="proinfo_shoucang">收藏</string>
    <string name="proinfo_tel">客服</string>
    <string name="proinfo_add_car">加入购物车</string>
    <string name="proinfo_buy">立即购买</string>
    <string name="proinfo_select_guige">请选择规格</string>
    <string name="proguige_color">颜色</string>
    <string name="proguige_color_black">黑色</string>
    <string name="proguige_chima">尺码</string>
    <string name="proguige_chima_s">S</string>
    <string name="proguige_chima_l">L</string>
    <string name="proguige_chima_m">M</string>
    <string name="procar_sum_price">合计：</string>
    <string name="procar_price">￥20.00</string>
    <string name="procar_yunfei">不含运费</string>
    <string name="procar_buy">结算</string>
    <string name="procar_shop_title">功夫库</string>

</resources>
