<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/hwz_bg_black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingRight="6dp"
        android:paddingLeft="12dp"
        >
        <ImageView
            android:id="@+id/head_portrait"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="4dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/proinfo_username"
            android:layout_toRightOf="@+id/head_portrait"
            android:textColor="@color/hwz_font_white"
            android:textSize="14sp"></TextView>

        <TextView
            android:id="@+id/user_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/proinfo_usercontent"
            android:layout_below="@+id/user_name"
            android:layout_toRightOf="@+id/head_portrait"
            android:textColor="@color/hwz_font_white"
            android:textSize="14sp"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/user_content"
            android:layout_toRightOf="@+id/head_portrait"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/user_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proinfo_com_date"
                android:textColor="@color/hwz_font_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/user_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proinfo_user_guige"
                android:textColor="@color/hwz_font_gray"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/hwz_background"></LinearLayout>
</LinearLayout>