<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000" >

    <View
        android:id="@+id/menu_selectclose"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menu_view"></View>

    <LinearLayout
        android:id="@+id/menu_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shop_bottom"
        android:background="@color/hwz_bg_black"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/product_price_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="115dp"
            android:layout_marginRight="15dp"
            android:text="@string/prolist_price_s"
            android:textColor="@color/hwz_font_yellow"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/proinfo_select_guige"
            android:textColor="@color/hwz_font_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/product_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proguige_color"
            android:textColor="@color/hwz_font_gray"
            android:textSize="18sp" />


        <com.hewuzhe.utils.TagGroup
            android:id="@+id/tag_group"
            style="@style/TagGroup"
            android:layout_marginTop="10dp" />


        <TextView
            android:id="@+id/product_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/proguige_chima"
            android:textColor="@color/hwz_font_gray"
            android:textSize="18sp" />

        <com.hewuzhe.utils.TagGroup
            android:id="@+id/tag_group_size"
            style="@style/TagGroup"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/shopcar_hint"
            android:layout_width="match_parent"
            android:gravity="center_vertical|right"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/shopcar_add"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="4dp"
                android:src="@mipmap/icon_add"/>
            <TextView
                android:id="@+id/pro_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/hwz_font_gray"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="1"

                android:textColor="@color/hwz_font_white"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/shopcar_sub"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="4dp"
                android:src="@mipmap/icon_sub"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_above="@+id/menu_view"
        android:layout_marginBottom="-70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/icon_item_pic" />

    <LinearLayout
        android:id="@+id/shop_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/hwz_bg_black">

        <LinearLayout
            android:id="@+id/pro_isFavo_click"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/hwz_bg_black"
            android:layout_weight="1"
            android:padding="4dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/pro_isFavo_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon_shoucang_click"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:id="@+id/pro_isFavo_tit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/proinfo_shoucang"
                android:textColor="@color/hwz_font_gray"/>
        </LinearLayout>

        <TextView
            android:id="@+id/pro_add_shopcar_true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/hwz_background"
            android:layout_weight="2"
            android:text="@string/proinfo_add_car"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/hwz_font_white"/>

        <TextView
            android:id="@+id/pro_buy_now_true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/hwz_font_yellow"
            android:layout_weight="2"
            android:text="@string/proinfo_buy"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/hwz_font_white" />

    </LinearLayout>

</RelativeLayout>