<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hwz_bg_black"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_below="@+id/title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/framelayout"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:orientation="vertical" >

                <com.hewuzhe.banner.ViewFlow
                    android:id="@+id/viewflow"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:padding="3dip" >

                    <com.hewuzhe.banner.CircleFlowIndicator
                        android:id="@+id/viewflowindic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:padding="2dip"
                        app:activeColor="@color/hwz_font_gray"
                        app:activeType="fill"
                        app:circleSeparation="20dip"
                        app:inactiveColor="#ffffff"
                        app:inactiveType="fill"
                        app:radius="4dip" />
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/proinfo_title"
                    android:textColor="@color/hwz_font_white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/prolist_exchange_point"
                        android:textColor="@color/hwz_font_yellow"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/proinfo_baoyou"
                        android:textColor="@color/hwz_font_gray"
                        android:visibility="invisible"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/proinfo_liulan"
                        android:textColor="@color/hwz_font_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/proinfo_xiaoliang"
                        android:textColor="@color/hwz_font_gray"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/hwz_background" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/proinfo_productinfo"
                        android:textColor="@color/hwz_font_white"
                        android:textSize="16sp" />

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/hwz_background"></LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/proinfo_usercontent"
                        android:textColor="@color/hwz_font_gray"
                        android:textSize="14sp"></TextView>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/hwz_background" >
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/proinfo_exchange_time"
                        android:layout_gravity="center"
                        android:textColor="@color/hwz_font_gray"
                        android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/hwz_bg_black">

        <TextView
            android:id="@+id/pro_buy_now"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:background="@color/hwz_font_yellow"
            android:layout_weight="2"
            android:text="@string/proinfo_buy"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/hwz_font_white" />

    </LinearLayout>
</RelativeLayout>